Updated Website URL for portfolio page

--- a/CV/index.html
+++ b/CV/index.html
@@ -97,7 +97,7 @@
                         <b>March 2021</b><br><br>
                         Created a CV that is available online using <b>HTML</b>, <b>CSS</b>, <b>Bootstrap</b> and
                         <b>SCSS</b><br><br>
-                        Website here: <a href="https://thirsty-mayer-a42bdf.netlify.app/">Website</a><br>
+                        Website here: <a href="https://bit.ly/3vL4EWQ">Website</a><br>
                         Github here: <a href="https://github.com/AbrialWong/Online-CV/tree/Deployment/CV">Github</a>
                       </p>
                     </div>
