--- a/CV/index.html
+++ b/CV/index.html
@@ -22,7 +22,6 @@
 
   <!----------------------- Navigation------------------->
   <nav class="navbar navbar-expand-lg">
-    <a class="navbar-brand" href="#">Abrial Wong</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
       aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="line"></span> 
@@ -179,6 +178,40 @@
               <!-----------------Image 1 (C1-1)-------------->
             </div>
             <!--Grid column 3 (C3)-->
+
+            <!--Grid column 4 (C4)-->
+            <div class="col-lg-3 col-md-6 mb-4">
+
+                          <!-----------------Image 1 (C1-1)-------------->
+                          <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#p10"><img
+                              src="./img/Programming/contact-form.jpg" class="img-fluid mb-4" alt=""></button>
+            
+                          <!-- Modal (C1-1) -->
+                          <div id="p10" class="modal fade" role="dialog">
+                            <div class="modal-dialog">
+            
+                              <!-- Modal content-->
+                              <div class="modal-content">
+                                <div class="modal-header">
+                                  <p class="modal-title"> <img src="./img/Programming/contact-form.jpg" class="img-fluid mb-4"
+                                      alt=""></p>
+                                </div>
+                                <div class="modal-body">
+                                  <h4>Contact Form</h4>
+                                  <p><b>March 2021</b><br><br>
+                                    Created a simple contact to be able to validate data using express validator in node js.
+                                    using <b>HTML</b> , <b>CSS</b> ,<b>SCSS</b>, <b>Bootstrap</b>,<b>EJS</b>, <b>Express JS</b>.<br><br>
+                                    Github here: <a href="https://github.com/AbrialWong/Portfolio/tree/master/Contact-form">Github</a>
+                                </div>
+                                <div class="modal-footer">
+                                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                          <!-----------------Image 1 (C1-1)-------------->
+            </div>
+            <!--Grid column 4 (C4)-->
 
           </div>
           <!-- row -->
