--- a/CV/index.html
+++ b/CV/index.html
@@ -77,10 +77,10 @@
               <div class="col-lg-3 col-md-6 mb-4">
 
                 <!-----------------Online CV-------------->
-                <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#p1">
+                <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#cv">
                   <img src="./img/Programming/online-cv.png" class="img-fluid mb-4" alt="">
                 </button>
-                  <div id="p1" class="modal fade" role="dialog">
+                  <div id="cv" class="modal fade" role="dialog">
                     <div class="modal-dialog">
 
                       <!-- Modal content-->
@@ -107,10 +107,10 @@
                   </div>
 
                 <!-----------------Calculator-------------->
-                <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#p2">
+                <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#cal">
                   <img src="./img/Programming/calculator.png" class="img-fluid mb-4" alt="">
                 </button>
-                  <div id="p2" class="modal fade" role="dialog">
+                  <div id="cal" class="modal fade" role="dialog">
                     <div class="modal-dialog">
 
                       <!-- Modal content-->
@@ -141,10 +141,10 @@
               <div class="col-lg-3 col-md-6 mb-4">
 
                 <!-----------------Kissabella (Shopping website)-------------->
-                <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#p4">
+                <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#shop">
                   <img src="./img/Programming/shopping-site.png" class="img-fluid mb-4" alt="">
                 </button>
-                  <div id="p4" class="modal fade" role="dialog">
+                  <div id="shop" class="modal fade" role="dialog">
                     <div class="modal-dialog">
 
                       <!-- Modal content-->
@@ -169,10 +169,10 @@
                   </div>
 
                 <!-----------------The Sponge Oven (E-Commerce site-------------->
-                <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#p5">
+                <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#ecom">
                   <img src="./img/Programming/e-commerce-home.png" class="img-fluid mb-4" alt="">
                 </button>
-                  <div id="p5" class="modal fade" role="dialog">
+                  <div id="ecom" class="modal fade" role="dialog">
                     <div class="modal-dialog">
 
                       <!-- Modal content-->
@@ -206,10 +206,10 @@
               <div class="col-lg-3 col-md-6 mb-4">
 
                 <!-----------------Personal Website (SP)-------------->
-                <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#p7">
+                <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#sp">
                   <img src="./img/Programming/personal-web.png" class="img-fluid mb-4" alt="">
                 </button>
-                  <div id="p7" class="modal fade" role="dialog">
+                  <div id="sp" class="modal fade" role="dialog">
                     <div class="modal-dialog">
 
                       <!-- Modal content-->
@@ -238,10 +238,10 @@
               <div class="col-lg-3 col-md-6 mb-4">
 
                 <!-----------------Contact Form-------------->
-                <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#p5">
+                <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#cForm">
                   <img src="./img/Programming/contact-form.jpg" class="img-fluid mb-4" alt="">
                 </button>
-                  <div id="p5" class="modal fade" role="dialog">
+                  <div id="cForm" class="modal fade" role="dialog">
                     <div class="modal-dialog">
 
                       <!-- Modal content-->
