--- a/CV/index.html
+++ b/CV/index.html
@@ -232,6 +232,34 @@
                     </div>
                   </div>
 
+                <!-----------------Employee Dashboard-------------->
+                <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#emp-dash">
+                  <img src="./img/Programming/employee-dash.png" class="img-fluid mb-4" alt="">
+                </button>
+                  <div id="emp-dash" class="modal fade" role="dialog">
+                    <div class="modal-dialog">
+
+                      <!-- Modal content-->
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <p class="modal-title"> <img src="./img/Programming/employee-dash.png" class="img-fluid mb-4"
+                              alt=""></p>
+                        </div>
+                        <div class="modal-body">
+                          <h4>Employee Dashboard</h4>
+                          <p><b>October 2022</b><br><br>
+                            Created a simple employee dashboard
+                            using <b>React</b>, <b>React-Redux</b>, <b></b>Redux Toolkit, <b>Ant Design</b>, <b>LESS</b>, <b>Dummy rest api example</b>, <b>fetch</b>
+                            <br><br>
+                            Website here: <a href="https://shorturl.at/cdMW9">Website</a><br>
+                            Github here: <a href="https://github.com/AbrialWong/employee-dashboard">Github</a>
+                        </div>
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
 
               <!--Grid column 4 (C4)-->
