added hosted website

--- a/CV/index.html
+++ b/CV/index.html
@@ -96,7 +96,8 @@
                             Created a CV that is available online using <b>HTML</b>, <b>CSS</b>, <b>Bootstrap</b> and
                             <b>SCSS</b><br><br>
                             Website here: <a href="https://bit.ly/3vL4EWQ">Website</a><br>
-                            Github here: <a href="https://github.com/AbrialWong/Online-CV/tree/Deployment/CV">Github</a>
+                            Github here: <a href="https://github.com/AbrialWong/Online-CV/tree/Deployment/CV">Github</a><br>
+                            Hosted on: <a href="https://www.netlify.com">Netlify</a>
                           </p>
                         </div>
                         <div class="modal-footer">
@@ -125,7 +126,8 @@
                             <b>March 2021</b><br><br>
                             Created a simple Calculator using React and css. <br><br>
                             Website here: <a href="https://bit.ly/3v4Ei0W">Website</a><br>
-                            Github here: <a href="https://github.com/AbrialWong/calculator">Github</a>
+                            Github here: <a href="https://github.com/AbrialWong/calculator">Github</a><br>
+                            Hosted on: <a href="https://www.netlify.com">Netlify</a>
                           </p>
                         </div>
                         <div class="modal-footer">
@@ -252,7 +254,9 @@
                             using <b>React</b>, <b>React-Redux</b>, <b></b>Redux Toolkit, <b>Ant Design</b>, <b>LESS</b>, <b>Dummy rest api example</b>, <b>fetch</b>
                             <br><br>
                             Website here: <a href="https://shorturl.at/cdMW9">Website</a><br>
-                            Github here: <a href="https://github.com/AbrialWong/employee-dashboard">Github</a>
+                            Github here: <a href="https://github.com/AbrialWong/employee-dashboard">Github</a><br>
+                            Hosted on: <a href="https://vercel.com">Vercel</a>
+
                         </div>
                         <div class="modal-footer">
                           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
