edit css for programming portfolio description; edit technical skills; edit qualifications; edit work experience; edit about; edit copyright; delete unneccessary files

--- a/CV/index.html
+++ b/CV/index.html
@@ -93,11 +93,10 @@
                           <h4>Online CV</h4>
                           <p>
                             <b>March 2021</b><br><br>
-                            Created a CV that is available online using <b>HTML</b>, <b>CSS</b>, <b>Bootstrap</b> and
-                            <b>SCSS</b><br><br>
-                            Website here: <a href="https://bit.ly/3vL4EWQ">Website</a><br>
-                            Github here: <a href="https://github.com/AbrialWong/Online-CV/tree/Deployment/CV">Github</a><br>
-                            Hosted on: <a href="https://www.netlify.com">Netlify</a>
+                            This is my Online CV where it contains my portfolio, resume. I built it using <u>HTML</u> and for the styling, I used <u>CSS</u>, <u>Bootstrap</u> and
+                            <u>SCSS</u>. This website has been hosted on  <a href="https://www.netlify.com">Netlify</a>. <br><br> 
+                            <a class="btn btn-dark btn-sm" href="https://bit.ly/3vL4EWQ" role="button">Live Demo > </a>
+                            <a class="btn btn-dark btn-sm" href="https://github.com/AbrialWong/Online-CV" role="button">Github > </a>
                           </p>
                         </div>
                         <div class="modal-footer">
@@ -124,10 +123,10 @@
                           <h4>Colorful Calculator</h4>
                           <p>
                             <b>March 2021</b><br><br>
-                            Created a simple Calculator using React and css. <br><br>
-                            Website here: <a href="https://bit.ly/3v4Ei0W">Website</a><br>
-                            Github here: <a href="https://github.com/AbrialWong/calculator">Github</a><br>
-                            Hosted on: <a href="https://www.netlify.com">Netlify</a>
+                            This is my calculator. I built it using <u>React</u>, <u>Javascript</u> and for the styling, I used <u>CSS</u>.
+                            This website has been hosted on  <a href="https://www.netlify.com">Netlify</a>. <br><br> 
+                            <a class="btn btn-dark btn-sm" href="https://bit.ly/3v4Ei0W" role="button">Live Demo > </a>
+                            <a class="btn btn-dark btn-sm" href="https://github.com/AbrialWong/calculator" role="button">Github > </a>
                           </p>
                         </div>
                         <div class="modal-footer">
@@ -159,8 +158,8 @@
                           <h4>A Shopping website (kissabella)</h4>
                           <p>
                             <b>February 2012</b><br><br>
-                            Created a single page shopping site for kissabella using <b>HTML</b> , <b>CSS</b> , <b>Adobe
-                              Photoshop</b>
+                            Created a single page shopping site for kissabella using <u>HTML</u> , <u>CSS</u> , <u>Adobe
+                              Photoshop</u>
                           </p>
                         </div>
                         <div class="modal-footer">
@@ -187,12 +186,11 @@
                           <h4>A e-commerce site (The Sponge Oven)</h4>
                           <p>
                             <b>December 2021</b><br><br>
-                            Created a e-commerce site for The Sponge Oven using <b>HTML</b>, <b>React</b>, <b>CSS</b>, 
-                            <b>SCSS</b>, <b>React-Router-DOM</b>, <b>React-Bootstrap</b>, <b>styled-components</b>, 
-                            <b>Semantic UI</b>, <b> Javascript</b>, <b>Bootstrap</b>. 
-                            <br><br>
-                            Github here: <a href="https://github.com/AbrialWong/TheSpongeOven">Github</a>
-
+                            This is simple e-commerce site for The Sponge Oven. I built it using
+                            <u>HTML</u>, <u>React</u>, <u> Javascript</u>, <u>React-Router-DOM</u> and for the styling, I used 
+                            <u>Semantic UI</u>,<u>Bootstrap</u>,  <u>React-Bootstrap</u>, <u>styled-components</u>, <u>CSS</u>, 
+                            <u>SCSS</u><br><br>
+                            <a class="btn btn-dark btn-sm" href="https://github.com/AbrialWong/TheSpongeOven" role="button">Github > </a>
                           </p>
                         </div>
                         <div class="modal-footer">
@@ -225,7 +223,7 @@
                           <p><b>February 2012</b><br><br>
                             Created a personal website for one of my school assignment when I was in Year 2 in Singapore
                             Polytechnic
-                            using <b>HTML</b> , <b>CSS</b> , <b>Adobe Photoshop</b>
+                            using <u>HTML</u> , <u>CSS</u> , <u>Adobe Photoshop</u>
                         </div>
                         <div class="modal-footer">
                           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -250,13 +248,13 @@
                         <div class="modal-body">
                           <h4>Employee Dashboard</h4>
                           <p><b>October 2022</b><br><br>
-                            Created a simple employee dashboard
-                            using <b>React</b>, <b>React-Redux</b>, <b></b>Redux Toolkit, <b>Ant Design</b>, <b>LESS</b>, <b>Dummy rest api example</b>, <b>fetch</b>
+                            This project was completed as part of the take home assignment in the interview process for a job. I built it using
+                            <u>React</u>, <u>React-Redux</u>, <u>Redux Toolkit</u>, <u>Dummy rest api example</u>, <u>fetch</u> and for the 
+                            styling, I used <u>Ant Design</u>, <u>LESS</u>. 
+                            This website has been hosted on <a href="https://vercel.com">Vercel</a>. 
                             <br><br>
-                            Website here: <a href="https://shorturl.at/cdMW9">Website</a><br>
-                            Github here: <a href="https://github.com/AbrialWong/employee-dashboard">Github</a><br>
-                            Hosted on: <a href="https://vercel.com">Vercel</a>
-
+                            <a class="btn btn-dark btn-sm" href="https://employee-dashboard-antdesign.vercel.app/" role="button">Live Demo > </a>
+                            <a class="btn btn-dark btn-sm" href="https://github.com/AbrialWong/employee-dashboard" role="button">Github > </a>
                         </div>
                         <div class="modal-footer">
                           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -285,9 +283,10 @@
                         <div class="modal-body">
                           <h4>Contact Form</h4>
                           <p><b>March 2021</b><br><br>
-                            Created a simple contact to be able to validate data using express validator in node js.
-                            using <b>HTML</b> , <b>CSS</b> ,<b>SCSS</b>, <b>Bootstrap</b>,<b>EJS</b>, <b>Express JS</b>.<br><br>
-                            Github here: <a href="https://github.com/AbrialWong/contactForm">Github</a>
+                            This is a simple contact form and user is able to validate data using express validator in node js.
+                            I built it using <u>HTML</u> , <u>CSS</u> ,<u>SCSS</u>, <u>Bootstrap</u>,<u>EJS</u>, <u>Express JS</u>.
+                            <br><br>
+                            <a class="btn btn-dark btn-sm" href="https://github.com/AbrialWong/contactForm" role="button">Github > </a>
                         </div>
                         <div class="modal-footer">
                           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -1018,8 +1017,8 @@
           </ul>
           <p class="header">Technical Skills</p>
           <ul>
-            <li>Front End: JavaScript, jQuery, HTML5, CSS, Bootstrap, React, SCSS</li>
-            <li>Backend: C#, Java, Json, MVC, MySQL, MSSQL, ASP.NET, Node.js, MongoDB</li>
+            <li>Front End: React, Redux, MaterialUI, Javascript, HTML5, CSS, Bootstrap, SCSS jQuery</li>
+            <li>Backend: Node.js, MongoDB, TypeORM, TypeGraphQL, GraphQL, Expressjs, MSSQL, MySQL, C#, Asp.net, JSON, java</li>
             <li>Designing Skills: Adobe Photoshop, Adobe illustrator</li>
             <li>Animation Skills : Adobe Dreamweaver, Adobe Flash</li>
           </ul>
@@ -1027,6 +1026,10 @@
         <div class="col-6 edu-content-2 border">
           <p class="header">Qualifications</p>
           <div class="inner-grid">
+            <div class="inner-box">
+              <p class="innerheader"> SG United <br> Skill Programme </p>
+              <p class="text">Full Stack Developer<br> 2020-2021</p>
+            </div>
             <div class="inner-box">
               <p class="innerheader"> At-Sunrice <br> GlobalChef Academy </p>
               <p class="text">Diploma in Pastry and Bakery<br> 2017 - 2018</p>
@@ -1057,64 +1060,30 @@
         <div class="col-12">
           <div class="inner-grid">
             <div class="inner-box">
-              <p class="innerheader"> Pastry Cook<br>
-                March 2020 - October 2020
+              <p class="innerheader"> Junior Software Developer<br>
+                May 2021 - September 2022
               </p>
-              <p class="text">Windowsill Pies.<br>
+              <p class="text">Industrial Electronics Pte Ltd<br>
               <ul>
-                <li>Slice and Decorate Pies</li>
-                <li>Assist the Head Chef in doing daily Misc en place</li>
-                <li>Inventory</li>
-                <li>Maintain quality control of products in the kitchen</li>
-                <li>Cleanliness of Kitchen</li>
+                <li> Worked and maintain a content management application with React / Redux / Material-UI / Node.js/ graphQL/ typeGraphQL / MongoDB</li>
+                <li> Draw wireframe, sequence diagram, flowchart</li>
+                <li> Write and update documentation that is related to the project</li>
+                <li> Working on a content sharing website. Website is hosted on WordPress, and I have to create our own themes with PHP / HTML 5 / CSS / Bootstrap.</li>
+                <li> Write API with graphQL, typeGraphQL and typeORM</li>
+                <li> Write simple unit testing using Jest.</li>
+
               </ul>
               </p>
             </div>
             <div class="inner-box">
-              <p class="innerheader"> Head Baker / Chef<br>
-                March 2019 - December 2019
+              <p class="innerheader"> Head Baker / Pastry Cook<br>
+                March 2019 - October 2020
               </p>
-              <p class="text">Sesame & Bagel Cafe.<br>
+              <p class="text">F&B<br>
               <ul>
-                <li>Guide part timers</li>
-                <li>Manage the daily operation of the shop</li>
-                <li>Inventory</li>
-                <li>Maintain quality control of products in the kitchen</li>
-                <li>Control the amount of products to be baked on a daily, weekly and monthly basis.</li>
-                <li>Misc en place, bake and decorate all products in the shop</li>
-                <li>Maintain quality control for all items sold inside the shop</li>
-                <li>Cleanliness of the shop</li>
-                <li>Control the amount of food wastage</li>
-                <li>Serve customers</li>
-                <li>Interview part timers</li>
-                <li>Manage and assist part timers in daily operations.</li>
-              </ul>
-              </p>
-            </div>
-            <div class="inner-box">
-              <p class="innerheader"> Pastry Cook<br>
-                October 2018 - March 2019
-              </p>
-              <p class="text">Mandarin Oriental Hotel Group.<br>
-              <ul>
-                <li>Misc en place and make ala carte desserts (Avocado, Souffle, Coco Banana) for MObarMisc en place
-                  and
-                  make ala carte desserts (Avocado, Souffle, Coco Banana) for MObar</li>
-                <li>Maintain the inventory for MObar (chiller, freezer, dry store)</li>
-                <li>Maintain the cleanliness of the kitchen</li>
-              </ul>
-              </p>
-            </div>
-            <div class="inner-box">
-              <p class="innerheader"> Internship Trainee<br>
-                April 2018 - October 2018
-              </p>
-              <p class="text">TWG Tea Company.<br>
-              <ul>
-                <li>Assist the head chef in doing daily misc en place</li>
-                <li>Slice, Laminate, Bake and Decorate products</li>
-                <li>Assist head chef in checking the amount of stocks left inside the chiller or freezer</li>
-                <li>Maintain the cleanliness of the workplace</li>
+                <li>The Sponge Oven (Freelance)</li>
+                  <li> Windowsill Pies</li>
+                  <li> Sesame & Bagels Café</li>
               </ul>
               </p>
             </div>
@@ -1155,10 +1124,9 @@
         about learning new things, solving problems and adapt to changes well. She strongly believes that continuous
         learning is the key to improvement. <br><br>
         A highly motivated individual who is always keen to challenge herself. Working in the F&B industry has taught
-        her to be detailed orientated, able to multi task and able to work under pressure well. <br><br>
+        her to be detailed orientated, able to multi task and work under pressure. <br><br>
         Abrial runs her own baking business during her free time and is always keen to learn a new programming skills
-        through online courses. Currently, she is trying to attain a certificate in Full Stack Development and is
-        interested to work in the Infocomm Industry as a Front End Developer.<br><br>
+        through online courses by building mini projects along the way.<br><br>
         This website uses <b>HTML5</b>, <b>CSS</b>, <b>Bootstrap</b>, <b>SCSS</b>.
       </p>
     </div>
@@ -1229,7 +1197,7 @@
 
   <!----------------------Copyright---------------------->
   <div class="copyright navbar">
-    <p>Copyright &copy AbrialWong , 2021</p>
+    <p>Copyright &copy AbrialWong , 2022</p>
   </div>
 
   <!-- Bootstrap core JS-->
